# my-ctf-challenges

./: LICENSE  README.md
1337UP-LIVE/DeadTube/: README.md  index.js
1337UP-LIVE/contact-alex/: README.md  bot.js  index.js
ASIS-CTF-Finals-2024/leakbin/: start.sh
ASIS-CTF-Finals-2024/more-letters/: README.md  docker-compose.yml  start.sh
BlueWaterCTF-2024/bluenote/: README.md  generate-dist.sh
DiceCTF-2022/denoblog/: Dockerfile  README.md
DiceCTF-2022/notekeeper/: README.md  hint.js
DiceCTF-2022/vm-calc/: Dockerfile  README.md  index.js
DiceCTF-Quals-2024/burnbin/: challenge.yaml  make_handout.sh
DiceCTF-Quals-2024/funnylogin/: challenge.yaml  make_handout.sh
DiceCTF-Quals-2024/safestlist/: challenge.yaml  make_handout.sh
DiceCTF-Quals-2025/dicepass/: challenge.yml  make_handout.sh
DiceCTF-Quals-2025/nobin/: challenge.yml  make-handout.sh
corCTF-2024/rev/cormine/cormine/: .gitignore  Build.Dockerfile  Cargo.toml  build.rs  build.sh  rustfmt.toml
corCTF-2024/rev/cormine/cormine/assets/images/: blocks.aseprite
corCTF-2024/rev/cormine/cormine/assets/shaders/: voxel.wgsl
corCTF-2024/rev/cormine/cormine/cormine_generate/: Cargo.toml
corCTF-2024/rev/cormine/cormine/cormine_generate/src/: main.rs
corCTF-2024/rev/cormine/cormine/cormine_shared/: Cargo.toml
corCTF-2024/rev/cormine/cormine/cormine_shared/src/: lib.rs  save.rs  voxel.rs
corCTF-2024/rev/cormine/cormine/src/: args.rs  chunk.rs  debug.rs  highlight.rs  input.rs  main.rs  material.rs  mesh.rs  player.rs  renderdoc.rs  save.rs  terrain.rs  ui.rs  voxel.rs  world.rs
(+394 files in other folders)
