cargo-features = ["trim-paths"]

# Comment out cargo-features and [profile.release.trim-paths] if you are building on stable

[package]
name = "cormine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_egui = { version = "0.28.0", optional = true }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
ndarray = "0.15"
noise = "0.9.0"
rand = "0.8.5"
argh = "0.1.12"
leb128 = "0.2.5"
bit_field = "0.10.2"
cormine_shared = { version = "0.1.0", path = "cormine_shared" }
renderdoc = { version = "0.12", optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
strip = false
panic = "abort"
trim-paths = "all"

[features]
default = ["wireframe", "debug"]
wireframe = []
renderdoc = ["dep:renderdoc"]
debug = ["bevy_egui"]


[workspace]
members = ["cormine_generate", "cormine_shared"]
